--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@react-pdf/renderer": "^3.4.4",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.5",
     "datatables.net-bs": "^2.0.5",
@@ -28,8 +31,10 @@
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "html-react-parser": "^5.1.12",
+    "moment": "^2.30.1",
     "react": "^18.3.0",
-    "react-bootstrap": "^2.10.4",
+    "react-big-calendar": "^1.15.0",
+    "react-bootstrap": "^2.10.5",
     "react-currency-format": "^1.1.0",
     "react-currency-input-field": "^3.8.0",
     "react-data-table-component": "^7.6.2",
