--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-scripts": "^5.0.1",
     "react-search-autocomplete": "^8.5.2",
     "react-spinners": "^0.14.1",
+    "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4",
