--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.0",
+    "react-icons": "^5.3.0",
     "react-pdf": "^9.0.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
