--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.0",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-pdf": "^9.0.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
