punch in and out(backned)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@react-pdf/renderer": "^3.4.4",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.5",
     "datatables.net-bs": "^2.0.5",
@@ -31,6 +31,8 @@
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "html-react-parser": "^5.1.12",
+    "leaflet": "^1.9.4",
+    "measuretool-googlemaps-v3": "^1.0.2",
     "moment": "^2.30.1",
     "react": "^18.3.0",
     "react-big-calendar": "^1.15.0",
@@ -41,6 +43,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.0",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-pdf": "^9.0.0",
     "react-player": "^2.16.0",
@@ -49,7 +52,7 @@
     "react-search-autocomplete": "^8.5.2",
     "react-spinners": "^0.14.1",
     "react-switch": "^7.0.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
