--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-spinners": "^0.14.1",
     "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
