--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "html-react-parser": "^5.1.12",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "react": "^18.3.0",
     "react-big-calendar": "^1.15.0",
